--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "laravel/framework": "^8.0"
+        "laravel/framework": "^8.0",
+        "spatie/data-transfer-object": "^2.5"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
