--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": "^7.4",
         "laravel/framework": "^8.0",
-        "spatie/data-transfer-object": "^2.5"
+        "spatie/data-transfer-object": "^2.5",
+        "spatie/enum": "^3.1"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
