--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "php": "^7.4",
         "laravel/framework": "^8.0",
         "spatie/data-transfer-object": "^2.5",
-        "spatie/enum": "^3.1"
+        "spatie/enum": "^3.1",
+        "spatie/laravel-model-states": "^1.9",
+        "spatie/laravel-queueable-action": "^2.6"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
